Animations and styling

--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h2>GoCanvas Automater</h2>
+    <!-- <div class="circle-logo">
+      <img src="./images/AllianceLogo-128.png" alt="logo" class="logo" />
+    </div> -->
     <button id="viewButton">View all PDFs</button>
     <button id="downloadButton">Download all PDFs</button>
     <button id="compileDampersButton">Compile Dampers</button>
