Added Compile FS for Firestop jobs

--- a/popup.html
+++ b/popup.html
@@ -14,6 +14,7 @@
       <button id="viewButton">View all PDFs</button>
       <button id="downloadButton">Download all PDFs</button>
       <button id="compileDampersButton">Compile Dampers</button>
+      <button id="compileFSButton">Compile FS</button>
       <button id="compileHiltiLabelsButton">Compile Labels (Hilti)</button>
       <p class="note">Console: Ctrl + Shift + j</p>
     </div>
